spark/kubernetes/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
  namespace: spark-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: spark-hadoop:3.5.1
          command:
          - /bin/sh
          - -c
          - |
            /usr/local/bin/python3.11 -m pip install pyfarmhash==0.3.2 &&
            ls &&
            chmod +x spark-master &&
            ./spark-master
          ports:
            - containerPort: 7077
            - containerPort: 8080
          # resources:
          #   requests:
          #     cpu: 100m
