spark/kubernetes/spark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: spark-dev
  annotations:
spec:
  rules:
  - host: spark.kubernetes.net
    http:
      paths:
        - pathType: Prefix
          path: /ui
          backend:
            service:
              name: spark-master
              port:
                number: 8080
        - pathType: Prefix
          path: /
          backend:
            service:
              name: spark-master
              port:
                number: 7077
